--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
     "lazysizes": "^3.0.0-rc4",
     "loadjs": "^3.4.0",
     "mappy-breakpoints": "^0.2.3",
+    "marked": "^0.3.6",
     "normalize.css": "^6.0.0",
     "object-fit-images": "^3.1.3",
     "open-color": "^1.4.0",
     "photoswipe": "^4.1.1",
     "prismjs": "^1.6.0",
-    "quill": "^1.2.3",
     "suncalc": "^1.8.0",
     "typi": "^3.0.0",
     "vue": "^2.2.6"
