Fixes for gulp.

--- a/package.json
+++ b/package.json
@@ -1,73 +1,74 @@
 {
-    "name": "connorbaer",
-    "version": "4.0.3",
-    "description": "Problem-solving is my passion. This is my website.",
-    "main": "index.html",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/connor-baer/connorbaer.co.git"
-    },
-    "keywords": [
-        "connor",
-        "baer",
-        "developer",
-        "ai",
-        "designer"
-    ],
-    "author": "Connor Bär",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/connor-baer/connorbaer.co/issues"
-    },
-    "homepage": "https://connorbaer.co/",
-    "dependencies": {
-        "Right-Height": "github:cferdinandi/right-height",
-        "alertify.js": "^1.0.12",
-        "choices.js": "^2.7.8",
-        "fg-loadcss": "^1.3.1",
-        "fontfaceobserver": "^2.0.9",
-        "headroom.js": "^0.9.3",
-        "lazysizes": "^3.0.0-rc4",
-        "loadjs": "^3.4.0",
-        "mappy-breakpoints": "^0.2.3",
-        "marked": "^0.3.6",
-        "normalize.css": "^6.0.0",
-        "object-fit-images": "^3.1.3",
-        "open-color": "^1.4.0",
-        "photoswipe": "^4.1.1",
-        "prismjs": "^1.6.0",
-        "simplemde": "^1.11.2",
-        "suncalc": "^1.8.0",
-        "typi": "^3.0.0",
-        "vue": "^2.2.6"
-    },
-    "devDependencies": {
-        "babel-preset-es2015": "^6.22.0",
-        "browser-sync": "^2.18.8",
-        "critical": "^0.8.4",
-        "del": "^2.2.2",
-        "gulp": "^3.9.1",
-        "gulp-babili": "0.0.2",
-        "gulp-changed": "^2.0.0",
-        "gulp-concat": "^2.6.0",
-        "gulp-cssnano": "^2.1.2",
-        "gulp-favicons": "^2.2.7",
-        "gulp-filter": "^5.0.0",
-        "gulp-jshint": "^2.0.1",
-        "gulp-load-plugins": "^1.5.0",
-        "gulp-plumber": "^1.1.0",
-        "gulp-rename": "^1.2.2",
-        "gulp-rev": "^7.1.2",
-        "gulp-sass": "^3.0.0",
-        "gulp-sourcemaps": "^2.4.1",
-        "gulp-util": "^3.0.7",
-        "jshint": "^2.9.4",
-        "merge-stream": "^1.0.0",
-        "require-dir": "^0.3.0",
-        "run-sequence": "^1.2.2",
-        "sw-precache": "^5.0.0"
-    }
+  "name": "connorbaer",
+  "version": "4.0.3",
+  "description": "Problem-solving is my passion. This is my website.",
+  "main": "index.html",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/connor-baer/connorbaer.co.git"
+  },
+  "keywords": [
+    "connor",
+    "baer",
+    "developer",
+    "ai",
+    "designer"
+  ],
+  "author": "Connor Bär",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/connor-baer/connorbaer.co/issues"
+  },
+  "homepage": "https://connorbaer.co/",
+  "dependencies": {
+    "Right-Height": "github:cferdinandi/right-height",
+    "alertify.js": "^1.0.12",
+    "choices.js": "^2.7.8",
+    "fg-loadcss": "^1.3.1",
+    "fontfaceobserver": "^2.0.9",
+    "headroom.js": "^0.9.3",
+    "lazysizes": "^3.0.0-rc4",
+    "loadjs": "^3.4.0",
+    "mappy-breakpoints": "^0.2.3",
+    "marked": "^0.3.6",
+    "normalize.css": "^6.0.0",
+    "object-fit-images": "^3.1.3",
+    "open-color": "^1.4.0",
+    "photoswipe": "^4.1.1",
+    "prismjs": "^1.6.0",
+    "simplemde": "^1.11.2",
+    "suncalc": "^1.8.0",
+    "typi": "^3.0.0",
+    "vue": "^2.2.6"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.22.0",
+    "browser-sync": "^2.18.8",
+    "critical": "^0.8.4",
+    "del": "^2.2.2",
+    "gulp": "^3.9.1",
+    "gulp-babili": "0.0.2",
+    "gulp-changed": "^2.0.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-favicons": "^2.2.7",
+    "gulp-filter": "^5.0.0",
+    "gulp-jshint": "^2.0.1",
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-rev": "^7.1.2",
+    "gulp-sass": "^3.0.0",
+    "gulp-sourcemaps": "^2.4.1",
+    "gulp-util": "^3.0.7",
+    "jshint": "^2.9.4",
+    "merge-stream": "^1.0.0",
+    "node-sass": "^4.5.2",
+    "require-dir": "^0.3.0",
+    "run-sequence": "^1.2.2",
+    "sw-precache": "^5.0.0"
+  }
 }
