--- a/composer.json
+++ b/composer.json
@@ -1,46 +1,55 @@
 {
-    "name": "craftcms/craft",
-    "description": "Craft CMS",
-    "keywords": [
-        "craft",
-        "cms",
-        "craftcms",
-        "project"
-    ],
-    "license": "MIT",
-    "homepage": "https://craftcms.com/",
-    "type": "project",
-    "support": {
-        "email": "support@craftcms.com",
-        "issues": "https://github.com/craftcms/cms/issues?state=open",
-        "forum": "https://craftcms.stackexchange.com/",
-        "source": "https://github.com/craftcms/cms",
-        "docs": "https://craftcms.com/docs",
-        "rss": "https://craftcms.com/changelog.rss"
+  "name": "craftcms/craft",
+  "description": "Craft CMS",
+  "keywords": [
+    "craft",
+    "cms",
+    "craftcms",
+    "project"
+  ],
+  "license": "MIT",
+  "homepage": "https://craftcms.com/",
+  "type": "project",
+  "support": {
+    "email": "support@craftcms.com",
+    "issues": "https://github.com/craftcms/cms/issues?state=open",
+    "forum": "https://craftcms.stackexchange.com/",
+    "source": "https://github.com/craftcms/cms",
+    "docs": "https://craftcms.com/docs",
+    "rss": "https://craftcms.com/changelog.rss"
+  },
+  "minimum-stability": "beta",
+  "require": {
+    "php": ">=7.0.0",
+    "craftcms/cms": "^3.0.0-beta.12",
+    "craftcms/plugin-installer": "^1.0.0",
+    "vlucas/phpdotenv": "^2.4.0",
+    "roave/security-advisories": "dev-master",
+    "nystudio107/craft3-minify": "^1.2",
+    "nystudio107/craft3-cookies": "^1.1",
+    "nystudio107/craft3-recipe": "^1.0",
+    "craftcms/mailgun": "1.0.0.1",
+    "dukt/twitter": "~2.0",
+    "nystudio107/craft3-imageoptimize": "^1.0",
+    "clubstudioltd/craft3-asset-rev": "dev-master",
+    "selvinortiz/doxter": "^3.0",
+    "venveo/maintenance-mode": "dev-master"
+  },
+  "config": {
+    "optimize-autoloader": true
+  },
+  "scripts": {
+    "post-root-package-install": [
+      "php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+    ]
+  },
+  "repositories": [{
+      "type": "composer",
+      "url": "https://asset-packagist.org"
     },
-    "minimum-stability": "beta",
-    "require": {
-        "php": ">=7.0.0",
-        "craftcms/cms": "^3.0.0-beta.12",
-        "craftcms/plugin-installer": "^1.0.0",
-        "vlucas/phpdotenv": "^2.4.0",
-        "roave/security-advisories": "dev-master",
-        "nystudio107/craft3-minify": "^1.2",
-        "nystudio107/craft3-cookies": "^1.1",
-        "nystudio107/craft3-recipe": "^1.0",
-        "craftcms/mailgun": "1.0.0.1",
-        "dukt/twitter": "~2.0",
-        "nystudio107/craft3-imageoptim": "^1.0",
-        "clubstudioltd/craft3-asset-rev": "dev-master",
-        "selvinortiz/doxter": "^3.0"
-    },
-    "scripts": {
-        "post-root-package-install": [
-            "php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-        ]
-    },
-    "repositories": [{
-        "type": "composer",
-        "url": "https://asset-packagist.org"
-    }]
+    {
+      "type": "vcs",
+      "url": "https://github.com/venveo/craft3-maintenancemode.git"
+    }
+  ]
 }
