--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "simplemde": "^1.11.2",
     "suncalc": "^1.8.0",
     "typi": "^3.0.0",
-    "vue": "^2.2.6"
+    "vue": "^2.2.6",
+    "vue-resource": "^1.3.1"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.22.0",
