Adds pricing page.

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-dom": "^15.5.4",
     "react-tabs": "^0.8.3",
     "simplemde": "^1.11.2",
+    "smooth-scroll": "github:cferdinandi/smooth-scroll",
     "suncalc": "^1.8.0",
     "typi": "^3.0.0",
     "vue": "^2.2.6",
