--- a/package.json
+++ b/package.json
@@ -43,14 +43,15 @@
     "lazysizes": "^3.0.0-rc4",
     "loadjs": "^3.4.0",
     "mappy-breakpoints": "^0.2.3",
+    "next": "^3.0.6",
     "normalize.css": "^6.0.0",
     "object-fit-images": "^3.1.3",
     "open-color": "^1.4.0",
     "photoswipe": "^4.1.1",
     "prismjs": "^1.6.0",
     "query-string": "^4.3.4",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "react-tabs": "^0.8.3",
     "simplemde": "^1.11.2",
     "smooth-scroll": "github:cferdinandi/smooth-scroll",
