Add next-routes for easy dynamic routing

--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,15 @@
 {
-  "presets": [
-    "./babel-preset"
+  "presets": ["./babel-preset"],
+  "plugins": [
+    [
+      "module-resolver",
+      {
+        "root": ["./"],
+        "alias": {
+          "components": "./components",
+          "layouts": "./layouts"
+        }
+      }
+    ]
   ]
 }
