--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "mappy-breakpoints": "^0.2.3",
     "morgan": "^1.8.2",
     "next": "^3.2.2",
+    "next-routes": "^1.0.40",
     "normalize.css": "^6.0.0",
     "nprogress": "^0.2.0",
     "object-fit-images": "^3.1.3",
@@ -66,10 +67,10 @@
     "react-dom": "^15.6.1",
     "smooth-scroll": "github:cferdinandi/smooth-scroll",
     "styled-jsx-postcss": "^0.2.0",
+    "suncalc": "^1.8.0",
     "svgo": "^0.7.2",
     "svgstore": "^2.0.2",
     "svgxuse": "^1.2.4",
-    "suncalc": "^1.8.0",
     "typi": "^3.0.0",
     "whatwg-fetch": "^2.0.3",
     "winston": "^2.3.1"
