--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@std/esm": "^0.8.3",
     "body-parser": "^1.18.0",
     "choices.js": "^2.7.8",
+    "classnames": "^2.2.5",
     "express": "^4.15.4",
     "fg-loadcss": "^1.3.1",
     "fontfaceobserver": "^2.0.9",
