Continue porting the food section

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-tabs": "^2.0.0",
     "smooth-scroll": "github:cferdinandi/smooth-scroll",
     "styled-jsx-postcss": "^0.2.0",
     "suncalc": "^1.8.0",
