--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "start": "NODE_ENV=production node --inspect server/index.js",
     "storybook": "start-storybook -p 6007",
     "create:component": "foundry run plop component",
+    "images": "node -r esm scripts/transform-images.js",
     "test:js": "foundry run eslint --quiet **/**/*.js",
     "prepush": "yarn test:js"
   },
   "dependencies": {
+    "@mdx-js/tag": "^0.15.0",
     "@sumup/circuit-ui": "^0.0.6-canary",
     "body-parser": "^1.18.0",
     "cookie-parser": "^1.4.3",
@@ -66,6 +68,7 @@
     "winston": "^2.3.1"
   },
   "devDependencies": {
+    "@mdx-js/mdx": "^0.15.2",
     "@storybook/addon-actions": "^4.0.0-alpha.20",
     "@storybook/addon-info": "^4.0.0-alpha.20",
     "@storybook/addon-knobs": "^4.0.0-alpha.20",
@@ -76,6 +79,7 @@
     "@storybook/react": "^4.0.0-alpha.20",
     "@sumup/foundry": "^0.0.10",
     "@weco/next-plugin-transpile-modules": "^0.0.2",
+    "@zeit/next-mdx": "^1.1.0",
     "babel-eslint": "^9.0.0",
     "babel-plugin-emotion": "^9.2.8",
     "babel-plugin-lodash": "^3.3.4",
@@ -85,7 +89,12 @@
     "eslint-plugin-babel": "^5.2.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-react": "^7.11.1",
+    "glob": "^7.1.3",
     "husky": "^0.13.4",
+    "listr": "^0.14.2",
+    "make-dir": "^1.3.0",
+    "remark-emoji": "^2.0.1",
+    "sharp": "^0.20.8",
     "webpack": "^4.0.0",
     "webpack-bundle-analyzer": "^2.13.1"
   }
