--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
   "scripts": {
     "analyze": "ANALYZE=true yarn build",
     "dev": "nodemon --watch server --inspect server/index.js",
+    "prebuild": "yarn images && yarn sitemap",
     "build": "NODE_ENV=production next build src",
     "start": "NODE_ENV=production node --inspect server/index.js",
     "storybook": "start-storybook -p 6007",
     "create:component": "foundry run plop component",
     "images": "node -r esm scripts/transform-images.js",
+    "sitemap": "node -r esm scripts/generate-sitemap.js",
     "test:js": "foundry run eslint --quiet **/**/*.js",
     "prepush": "yarn test:js"
   },
@@ -63,7 +65,6 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-emotion": "^9.2.8",
-    "react-svg-loader": "^2.1.0",
     "suncalc": "^1.8.0",
     "winston": "^2.3.1"
   },
@@ -93,6 +94,9 @@
     "husky": "^0.13.4",
     "listr": "^0.14.2",
     "make-dir": "^1.3.0",
+    "next-compose-plugins": "^2.1.1",
+    "next-offline": "^2.12.0",
+    "react-svg-loader": "^2.1.0",
     "remark-emoji": "^2.0.1",
     "sharp": "^0.20.8",
     "webpack": "^4.0.0",
