--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "dev": "nodemon --watch server --inspect server/index.js",
     "prebuild": "yarn images && yarn sitemap",
     "build": "NODE_ENV=production next build src",
-    "start": "NODE_ENV=production node --inspect server/index.js",
+    "start": "NODE_ENV=production node server/index.js",
     "storybook": "start-storybook -p 6007",
     "create:component": "foundry run plop component",
     "images": "node -r esm scripts/transform-images.js",
