--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Connor Bär, connor-baer <hello@connorbaer.co>",
   "copyright": "connorbaer",
   "license": "MIT",
-  "homepage": "https://connorbaer.co/",
+  "homepage": "https://github.com/connor-baer/connorbaer.co",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/connor-baer/connorbaer.co.git"
@@ -20,21 +20,12 @@
   "bugs": {
     "url": "https://github.com/connor-baer/connorbaer.co/issues"
   },
-  "now": {
-    "type": "docker",
-    "public": false,
-    "alias": "connorbaer.co",
-    "features": {
-      "cloud": "v2"
-    }
-  },
   "scripts": {
     "analyze": "ANALYZE=true yarn build",
     "dev": "nodemon --watch server --inspect server/index.js",
-    "prebuild": "yarn images && yarn sitemap",
     "build": "NODE_ENV=production next build src",
     "start": "NODE_ENV=production node server/index.js",
-    "storybook": "start-storybook -p 6007",
+    "deploy": "yarn images && node -r esm scripts/deploy.js",
     "create:component": "foundry run plop component",
     "images": "node -r esm scripts/transform-images.js",
     "sitemap": "node -r esm scripts/generate-sitemap.js",
@@ -43,7 +34,10 @@
   },
   "dependencies": {
     "@mdx-js/tag": "^0.15.0",
-    "@sumup/circuit-ui": "^0.0.6-canary",
+    "@mdx-js/mdx": "^0.15.2",
+    "@sumup/circuit-ui": "^0.0.7-canary",
+    "@weco/next-plugin-transpile-modules": "^0.0.2",
+    "@zeit/next-mdx": "^1.1.0",
     "body-parser": "^1.18.0",
     "cookie-parser": "^1.4.3",
     "date-fns": "^2.0.0-alpha.16",
@@ -61,27 +55,24 @@
     "morgan": "^1.8.2",
     "next": "^7.0.0-canary.12",
     "nprogress": "^0.2.0",
+    "next-compose-plugins": "^2.1.1",
+    "next-offline": "^2.12.0",
+    "objectFitPolyfill": "^2.1.1",
     "open-color": "^1.4.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-emotion": "^9.2.8",
+    "react-svg-loader": "^2.1.0",
+    "rehype-slug": "^2.0.1",
+    "remark-emoji": "^2.0.1",
+    "remark-external-links": "^3.0.0",
     "suncalc": "^1.8.0",
+    "webpack": "^4.0.0",
     "winston": "^2.3.1"
   },
   "devDependencies": {
-    "@mdx-js/mdx": "^0.15.2",
-    "@storybook/addon-actions": "^4.0.0-alpha.20",
-    "@storybook/addon-info": "^4.0.0-alpha.20",
-    "@storybook/addon-knobs": "^4.0.0-alpha.20",
-    "@storybook/addon-links": "^4.0.0-alpha.20",
-    "@storybook/addon-options": "^4.0.0-alpha.20",
-    "@storybook/addon-storysource": "^4.0.0-alpha.20",
-    "@storybook/addons": "^4.0.0-alpha.20",
-    "@storybook/react": "^4.0.0-alpha.20",
     "@sumup/foundry": "^0.0.10",
-    "@weco/next-plugin-transpile-modules": "^0.0.2",
-    "@zeit/next-mdx": "^1.1.0",
     "babel-eslint": "^9.0.0",
     "babel-plugin-emotion": "^9.2.8",
     "babel-plugin-lodash": "^3.3.4",
@@ -91,16 +82,13 @@
     "eslint-plugin-babel": "^5.2.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-react": "^7.11.1",
+    "execa": "^1.0.0",
+    "get-stream": "^4.0.0",
     "glob": "^7.1.3",
     "husky": "^0.13.4",
     "listr": "^0.14.2",
     "make-dir": "^1.3.0",
-    "next-compose-plugins": "^2.1.1",
-    "next-offline": "^2.12.0",
-    "react-svg-loader": "^2.1.0",
-    "remark-emoji": "^2.0.1",
     "sharp": "^0.20.8",
-    "webpack": "^4.0.0",
     "webpack-bundle-analyzer": "^2.13.1"
   }
 }
