--- a/src/static/now.json
+++ b/src/static/now.json
@@ -2,7 +2,11 @@
   "name": "connor-static",
   "alias": "static.connor.li",
   "scale": {
-    "all": {
+    "bru": {
+      "min": 1,
+      "max": "auto"
+    },
+    "sfo": {
       "min": 1,
       "max": "auto"
     }
@@ -11,18 +15,22 @@
     "directoryListing": false,
     "headers": [
       {
-        "source" : "**/*.webp",
-        "headers" : [{
-          "key" : "Cache-Control",
-          "value" : "max-age=86400"
-        }]
+        "source": "**/*.webp",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "max-age=86400"
+          }
+        ]
       },
       {
-        "source" : "**/*.@(woff|woff2)",
-        "headers" : [{
-          "key" : "Cache-Control",
-          "value" : "max-age=604800"
-        }]
+        "source": "**/*.@(woff|woff2)",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "max-age=604800"
+          }
+        ]
       }
     ]
   }
