--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     "url": "https://github.com/connor-baer/connorbaer.co/issues"
   },
   "scripts": {
-    "analyze": "ANALYZE=true yarn build",
-    "dev": "nodemon --watch server --inspect server/index.js",
-    "build": "NODE_ENV=production next build src",
-    "start": "NODE_ENV=production node server/index.js",
+    "analyze": "ANALYZE=true yarn build:client",
+    "build": "run-p build:client build:server",
+    "build:client": "next build src",
+    "build:server": "webpack --env=production",
+    "clean": "rm -rf ./dist",
+    "predev": "yarn clean",
+    "dev": "webpack --env=develop --display-error-details",
+    "start": "NODE_ENV=production node --inspect dist/app.js",
     "deploy": "yarn images && node -r esm scripts/deploy.js",
     "create:component": "foundry run plop component",
     "images": "node -r esm scripts/transform-images.js",
@@ -35,7 +39,7 @@
   "dependencies": {
     "@mdx-js/mdx": "^0.15.2",
     "@mdx-js/tag": "^0.15.0",
-    "@sumup/circuit-ui": "^0.0.7-canary",
+    "@sumup/circuit-ui": "^0.0.9-canary",
     "@weco/next-plugin-transpile-modules": "^0.0.2",
     "@zeit/next-mdx": "^1.1.0",
     "body-parser": "^1.18.0",
@@ -45,7 +49,6 @@
     "emotion-server": "^9.2.8",
     "emotion-theming": "^9.2.6",
     "es-cookie": "^1.2.0",
-    "esm": "^3.0.82",
     "express": "^4.16.3",
     "fontfaceobserver": "^2.0.9",
     "glob": "^7.1.3",
@@ -54,7 +57,7 @@
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "morgan": "^1.8.2",
-    "next": "^7.0.0-canary.12",
+    "next": "^7.0.2",
     "next-compose-plugins": "^2.1.1",
     "next-offline": "^2.12.0",
     "nprogress": "^0.2.0",
@@ -75,19 +78,26 @@
   "devDependencies": {
     "@sumup/foundry": "^0.0.10",
     "babel-eslint": "^9.0.0",
+    "babel-loader": "^8.0.4",
     "babel-plugin-emotion": "^9.2.8",
     "babel-plugin-lodash": "^3.3.4",
+    "babel-preset-latest-node": "^2.0.2",
     "eslint": "^5.5.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^3.0.1",
     "eslint-plugin-babel": "^5.2.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-react": "^7.11.1",
+    "esm": "^3.0.82",
     "execa": "^1.0.0",
     "husky": "^0.13.4",
     "listr": "^0.14.2",
     "make-dir": "^1.3.0",
+    "nodemon-webpack-plugin": "^4.0.3",
+    "npm-run-all": "^4.1.3",
     "sharp": "^0.20.8",
-    "webpack-bundle-analyzer": "^2.13.1"
+    "webpack-bundle-analyzer": "^3.0.2",
+    "webpack-cli": "^3.1.2",
+    "webpack-node-externals": "^1.7.2"
   }
 }
