--- a/package.json
+++ b/package.json
@@ -26,23 +26,25 @@
     "build:client": "next build src",
     "build:server": "webpack --env=production",
     "clean": "rm -rf ./dist",
-    "predev": "yarn clean",
+    "predev": "yarn clean && yarn images",
     "dev": "webpack --env=develop --display-error-details",
     "start": "NODE_ENV=production node --inspect dist/app.js",
     "deploy": "yarn images && node -r esm scripts/deploy.js",
     "create:component": "foundry run plop component",
     "images": "node -r esm scripts/transform-images.js",
-    "sitemap": "node -r esm scripts/generate-sitemap.js",
     "test:js": "foundry run eslint --quiet **/**/*.js",
     "prepush": "yarn test:js"
   },
   "dependencies": {
+    "@contentful/rich-text-html-renderer": "^2.9.0",
+    "@contentful/rich-text-types": "^5.0.0",
     "@mdx-js/mdx": "^0.15.2",
     "@mdx-js/tag": "^0.15.0",
     "@sumup/circuit-ui": "^0.0.9-canary",
     "@weco/next-plugin-transpile-modules": "^0.0.2",
     "@zeit/next-mdx": "^1.1.0",
     "body-parser": "^1.18.0",
+    "contentful": "^7.0.5",
     "cookie-parser": "^1.4.3",
     "date-fns": "^2.0.0-alpha.16",
     "emotion": "^9.2.8",
