--- a/package.json
+++ b/package.json
@@ -21,26 +21,25 @@
     "url": "https://github.com/connor-baer/connorbaer.co/issues"
   },
   "scripts": {
-    "analyze": "ANALYZE=true yarn build:client",
+    "dev": "webpack --env=develop --display-error-details",
     "build": "run-p build:client build:server",
     "build:client": "next build src",
     "build:server": "webpack --env=production",
+    "start": "NODE_ENV=production node dist/app.js",
+    "export": "next export src",
+    "deploy": "node -r esm scripts/deploy.js",
+    "now-build": "yarn build",
     "clean": "rm -rf ./dist",
-    "predev": "yarn clean",
-    "dev": "webpack --env=develop --display-error-details",
-    "start": "NODE_ENV=production node --inspect dist/app.js",
-    "deploy": "yarn images && node -r esm scripts/deploy.js",
-    "create:component": "foundry run plop component",
-    "images": "node -r esm scripts/transform-images.js",
-    "sitemap": "node -r esm scripts/generate-sitemap.js",
-    "test:js": "foundry run eslint --quiet **/**/*.js",
-    "prepush": "yarn test:js"
+    "lint": "foundry run eslint --fix **/**/*.js",
+    "analyze": "BUNDLE_ANALYZE=both yarn build:client",
+    "create:component": "foundry run plop component"
   },
   "dependencies": {
     "@mdx-js/mdx": "^0.15.2",
     "@mdx-js/tag": "^0.15.0",
     "@sumup/circuit-ui": "^0.0.9-canary",
     "@weco/next-plugin-transpile-modules": "^0.0.2",
+    "@zeit/next-bundle-analyzer": "^0.1.2",
     "@zeit/next-mdx": "^1.1.0",
     "body-parser": "^1.18.0",
     "cookie-parser": "^1.4.3",
@@ -52,14 +51,20 @@
     "express": "^4.16.3",
     "fontfaceobserver": "^2.0.9",
     "glob": "^7.1.3",
+    "imagemin-gifsicle": "^6.0.1",
+    "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-optipng": "^6.0.0",
+    "imagemin-svgo": "^7.0.0",
     "intersection-observer": "^0.5.0",
     "isomorphic-unfetch": "^2.1.1",
     "lodash": "^4.17.10",
+    "lqip-loader": "^2.2.0",
     "moment": "^2.22.2",
     "morgan": "^1.8.2",
-    "next": "^7.0.2",
+    "next": "^7.0.2-canary.49 ",
     "next-compose-plugins": "^2.1.1",
     "next-offline": "^2.12.0",
+    "next-optimized-images": "^2.3.1",
     "nprogress": "^0.2.0",
     "objectFitPolyfill": "^2.1.1",
     "open-color": "^1.4.0",
@@ -71,31 +76,29 @@
     "rehype-slug": "^2.0.1",
     "remark-emoji": "^2.0.1",
     "remark-external-links": "^3.0.0",
+    "require-all": "^3.0.0",
+    "responsive-loader": "^1.2.0",
+    "sharp": "^0.21.1",
     "suncalc": "^1.8.0",
+    "svg-sprite-loader": "^4.1.3",
+    "webp-loader": "^0.4.0",
     "webpack": "^4.0.0",
     "winston": "^2.3.1"
   },
   "devDependencies": {
-    "@sumup/foundry": "^0.0.10",
+    "@babel/core": "^7.0.0",
+    "@sumup/foundry": "^1.0.0",
     "babel-eslint": "^9.0.0",
     "babel-loader": "^8.0.4",
     "babel-plugin-emotion": "^9.2.8",
     "babel-plugin-lodash": "^3.3.4",
     "babel-preset-latest-node": "^2.0.2",
-    "eslint": "^5.5.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-config-prettier": "^3.0.1",
-    "eslint-plugin-babel": "^5.2.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-react": "^7.11.1",
     "esm": "^3.0.82",
     "execa": "^1.0.0",
-    "husky": "^0.13.4",
     "listr": "^0.14.2",
     "make-dir": "^1.3.0",
     "nodemon-webpack-plugin": "^4.0.3",
     "npm-run-all": "^4.1.3",
-    "sharp": "^0.20.8",
     "webpack-bundle-analyzer": "^3.0.2",
     "webpack-cli": "^3.1.2",
     "webpack-node-externals": "^1.7.2"
