--- a/now.json
+++ b/now.json
@@ -1,9 +1,13 @@
 {
   "name": "connor",
-  "alias": "connor.li",
+  "alias": "connorbaer.co",
   "version": 1,
   "scale": {
     "bru": {
+      "min": 1,
+      "max": "auto"
+    },
+    "sfo1": {
       "min": 1,
       "max": "auto"
     }
