--- a/src/static/now.json
+++ b/src/static/now.json
@@ -1,6 +1,6 @@
 {
   "name": "connor-static",
-  "alias": "static.connor.li",
+  "alias": "static.connorbaer.co",
   "version": 1,
   "scale": {
     "bru": {
