--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
   },
   "scripts": {
     "dev": "webpack --env=develop --display-error-details",
-    "build": "run-p build:client build:server",
+    "build": "run-p build:client build:server && deploy static",
     "build:client": "next build src",
     "build:server": "webpack --env=production",
     "start": "NODE_ENV=production node dist/app.js",
     "export": "next export src",
-    "deploy": "node -r esm scripts/deploy.js",
+    "deploy": "git push dokku master",
+    "deploy:static": "now src/static --static --no-clipboard && now alias",
     "now-build": "yarn build",
     "clean": "rm -rf ./dist",
     "lint": "run-p lint:client lint:server",
@@ -100,6 +101,7 @@
     "listr": "^0.14.2",
     "make-dir": "^1.3.0",
     "nodemon-webpack-plugin": "^4.0.3",
+    "now": "^13.0.6",
     "npm-run-all": "^4.1.3",
     "webpack-bundle-analyzer": "^3.0.2",
     "webpack-cli": "^3.1.2",
