feat: Upgrade to Emotion 10 and Bamboo UI 1

--- a/package.json
+++ b/package.json
@@ -32,25 +32,24 @@
     "now-build": "yarn build",
     "clean": "rm -rf ./dist",
     "lint": "run-p lint:client lint:server",
-    "lint:client": "foundry run eslint --fix src/**/*.js",
-    "lint:server": "foundry run eslint --fix server/**/*.js",
+    "lint:client": "foundry run eslint --fix \"src/**/*.js\"",
+    "lint:server": "foundry run eslint --fix \"server/**/*.js\"",
     "analyze": "BUNDLE_ANALYZE=both yarn build:client",
     "create:component": "foundry run plop component"
   },
   "dependencies": {
-    "@madebyconnor/bamboo-ui": "^0.4.4",
+    "@emotion/core": "^10.0.10",
+    "@emotion/styled": "^10.0.10",
+    "@madebyconnor/bamboo-ui": "^1.0.0-beta.5",
     "@mdx-js/mdx": "^0.15.2",
     "@mdx-js/tag": "^0.15.0",
-    "@sumup/circuit-ui": "^0.0.16-canary",
-    "@weco/next-plugin-transpile-modules": "^0.0.2",
+    "@sumup/circuit-ui": "1.0.0-beta.2",
     "@zeit/next-bundle-analyzer": "^0.1.2",
     "@zeit/next-mdx": "^1.1.0",
     "body-parser": "^1.18.0",
     "cookie-parser": "^1.4.3",
     "date-fns": "^2.0.0-alpha.16",
-    "emotion": "^9.2.8",
-    "emotion-server": "^9.2.8",
-    "emotion-theming": "^9.2.6",
+    "emotion-theming": "^10.0.10",
     "es-cookie": "^1.2.0",
     "express": "^4.16.3",
     "fontfaceobserver": "^2.0.9",
@@ -65,17 +64,17 @@
     "lqip-loader": "^2.2.0",
     "moment": "^2.22.2",
     "morgan": "^1.8.2",
-    "next": "^7.0.2-canary.49 ",
+    "next": "^8.0.0 ",
     "next-compose-plugins": "^2.1.1",
     "next-offline": "^2.12.0",
     "next-optimized-images": "^2.3.1",
+    "next-transpile-modules": "^2.2.0",
     "nprogress": "^0.2.0",
     "objectFitPolyfill": "^2.1.1",
     "open-color": "^1.4.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-emotion": "^9.2.8",
     "react-svg-loader": "^2.1.0",
     "rehype-slug": "^2.0.1",
     "remark-emoji": "^2.0.1",
@@ -90,12 +89,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@emotion/babel-preset-css-prop": "^10.0.9",
     "@sumup/foundry": "^1.0.0",
     "babel-eslint": "^9.0.0",
     "babel-loader": "^8.0.4",
-    "babel-plugin-emotion": "^9.2.8",
     "babel-plugin-lodash": "^3.3.4",
     "babel-preset-latest-node": "^2.0.2",
+    "eslint-import-resolver-webpack": "^0.11.1",
+    "eslint-loader": "^2.1.2",
     "esm": "^3.0.82",
     "execa": "^1.0.0",
     "listr": "^0.14.2",
