--- a/package.json
+++ b/package.json
@@ -41,11 +41,10 @@
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.10",
     "@madebyconnor/bamboo-ui": "^1.0.0",
-    "@mdx-js/mdx": "^0.15.2",
-    "@mdx-js/tag": "^0.15.0",
+    "@mdx-js/mdx": "^1.0.0",
+    "@mdx-js/react": "^1.0.0",
+    "@next/bundle-analyzer": "^9.0.3",
     "@sumup/circuit-ui": "^1.0.0",
-    "@zeit/next-bundle-analyzer": "^0.1.2",
-    "@zeit/next-mdx": "^1.1.0",
     "body-parser": "^1.18.0",
     "cookie-parser": "^1.4.3",
     "date-fns": "^2.0.0-alpha.16",
@@ -58,7 +57,6 @@
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-optipng": "^6.0.0",
     "imagemin-svgo": "^7.0.0",
-    "intersection-observer": "^0.5.0",
     "isomorphic-unfetch": "^2.1.1",
     "lodash": "^4.17.10",
     "lqip-loader": "^2.2.0",
@@ -66,11 +64,11 @@
     "morgan": "^1.8.2",
     "next": "^9.0.0 ",
     "next-compose-plugins": "^2.1.1",
+    "next-mdx-enhanced": "^2.0.0",
     "next-offline": "^2.12.0",
     "next-optimized-images": "^2.3.1",
     "next-transpile-modules": "^2.2.0",
     "nprogress": "^0.2.0",
-    "objectFitPolyfill": "^2.1.1",
     "open-color": "^1.4.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
@@ -93,12 +91,14 @@
     "@sumup/foundry": "^1.0.0",
     "babel-eslint": "^9.0.0",
     "babel-loader": "^8.0.4",
+    "babel-plugin-import-glob-array": "^0.2.0",
     "babel-plugin-lodash": "^3.3.4",
     "babel-preset-latest-node": "^2.0.2",
     "eslint-import-resolver-webpack": "^0.11.1",
     "eslint-loader": "^2.1.2",
     "esm": "^3.0.82",
     "execa": "^1.0.0",
+    "extra-watch-webpack-plugin": "^1.0.3",
     "listr": "^0.14.2",
     "make-dir": "^1.3.0",
     "nodemon-webpack-plugin": "^4.0.3",
