--- a/src/.babelrc
+++ b/src/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": ["next/babel", "@emotion/babel-preset-css-prop"],
-  "plugins": ["lodash"]
+  "plugins": ["lodash", "import-glob-array"]
 }
