--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "remark-emoji": "^2.0.1",
     "remark-external-links": "^3.0.0",
     "sharp": "^0.21.1",
+    "url": "^0.11.0",
     "webpack": "^4.0.0"
   },
   "devDependencies": {
