--- a/package.json
+++ b/package.json
@@ -57,8 +57,10 @@
     "react-dom": "^16.4.2",
     "react-svg-loader": "^2.1.0",
     "rehype-slug": "^2.0.1",
+    "remark": "^11.0.1",
     "remark-emoji": "^2.0.1",
     "remark-external-links": "^3.0.0",
+    "remark-mdx": "^1.3.0",
     "sharp": "^0.21.1",
     "url": "^0.11.0",
     "webpack": "^4.0.0"
