--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "emotion-theming": "^10.0.10",
     "es-cookie": "^1.2.0",
     "fontfaceobserver": "^2.0.9",
+    "github-slugger": "^1.2.1",
     "glob": "^7.1.3",
     "isomorphic-unfetch": "^2.1.1",
     "lodash": "^4.17.10",
