--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-map-gl": "^5.0.10",
     "react-svg-loader": "^2.1.0",
     "rehype-slug": "^2.0.1",
     "remark": "^11.0.1",
