--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "connorbaer.co",
   "version": "5.0.0",
   "description": "Website for Connor Bär.",
-  "main": "app.js",
+  "main": "next.config.js",
   "author": "Connor Bär, connor-baer <hello@connorbaer.co>",
   "copyright": "connorbaer",
   "license": "MIT",
@@ -28,7 +28,7 @@
     "build": "next build",
     "start": "next start",
     "export": "next export",
-    "lint": "foundry run eslint --fix \"src/**/*.js\"",
+    "lint": "foundry run eslint --fix \"**/*.js\"",
     "analyze": "ANALYZE=true yarn build",
     "create:component": "foundry run plop component"
   },
@@ -47,7 +47,6 @@
     "glob": "^7.1.3",
     "isomorphic-unfetch": "^2.1.1",
     "lodash": "^4.17.10",
-    "moment": "^2.22.2",
     "next": "^9.0.0 ",
     "next-compose-plugins": "^2.1.1",
     "next-mdx-enhanced": "^2.0.0",
