--- a/.eslintignore
+++ b/.eslintignore
@@ -1,4 +1,9 @@
-node_modules/*
-graveyard/*
-**/.next/*
-**/out/*
+node_modules/
+build/
+dist/
+.next/
+.out/
+static/
+public/
+coverage/
+__coverage__/
