--- a/package.json
+++ b/package.json
@@ -38,47 +38,47 @@
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.10",
     "@madebyconnor/bamboo-ui": "^2.0.0-canary",
-    "@mdx-js/mdx": "^1.0.0",
-    "@mdx-js/react": "^1.0.0",
-    "@next/bundle-analyzer": "^9.0.3",
+    "@mdx-js/mdx": "^1.6.21",
+    "@mdx-js/react": "^1.6.21",
+    "@next/bundle-analyzer": "^10.0.2",
     "date-fns": "^2.0.0-alpha.16",
     "emotion-theming": "^10.0.10",
     "es-cookie": "^1.2.0",
     "fontfaceobserver": "^2.0.9",
     "github-slugger": "^1.2.1",
     "glob": "^7.1.3",
-    "isomorphic-unfetch": "^2.1.1",
+    "isomorphic-unfetch": "^3.1.0",
     "lodash": "^4.17.10",
-    "next": "^9.0.0 ",
-    "next-compose-plugins": "^2.1.1",
-    "next-mdx-enhanced": "^4.0.0",
+    "next": "^10.0.2",
+    "next-compose-plugins": "^2.2.1",
+    "next-mdx-enhanced": "^5.0.0",
     "open-color": "^1.4.0",
     "prop-types": "^15.6.2",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-map-gl": "^5.0.10",
-    "react-svg-loader": "^2.1.0",
-    "rehype-slug": "^2.0.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-map-gl": "^5.2.10",
+    "react-svg-loader": "^3.0.3",
+    "rehype-slug": "^3.0.0",
     "remark": "^11.0.1",
     "remark-emoji": "^2.0.1",
     "remark-external-links": "^3.0.0",
-    "remark-mdx": "^1.3.0",
-    "sharp": "^0.24.0",
-    "typescript": "^4.0.2",
+    "remark-mdx": "^1.6.21",
+    "sharp": "^0.26.3",
+    "typescript": "^4.1.2",
     "url": "^0.11.0",
-    "webpack": "^4.0.0"
+    "webpack": "^5.6.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
+    "@babel/core": "^7.12.7",
     "@emotion/babel-preset-css-prop": "^10.0.9",
-    "@sumup/foundry": "^3.0.0",
-    "@types/lodash": "^4.14.161",
-    "@types/react": "^16.9.49",
-    "babel-eslint": "^9.0.0",
-    "babel-loader": "^8.0.4",
+    "@sumup/foundry": "^4.0.0-canary",
+    "@types/lodash": "^4.14.165",
+    "@types/react": "^17.0.0",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.1",
     "babel-plugin-import-glob-array": "^0.2.0",
     "babel-plugin-lodash": "^3.3.4",
-    "eslint-import-resolver-webpack": "^0.11.1",
-    "eslint-loader": "^2.1.2"
+    "eslint-import-resolver-webpack": "^0.13.0",
+    "eslint-loader": "^4.0.2"
   }
 }
