--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@mdx-js/mdx": "^1.6.21",
     "@mdx-js/react": "^1.6.21",
     "@next/bundle-analyzer": "^10.0.2",
+    "@tinacms/react-core": "^0.33.0",
     "date-fns": "^2.0.0-alpha.16",
     "emotion-theming": "^10.0.10",
     "es-cookie": "^1.2.0",
@@ -58,12 +59,15 @@
     "react-dom": "^17.0.1",
     "react-map-gl": "^5.2.10",
     "react-svg-loader": "^3.0.3",
+    "react-tinacms-inline": "^0.33.0",
     "rehype-slug": "^3.0.0",
     "remark": "^11.0.1",
     "remark-emoji": "^2.0.1",
     "remark-external-links": "^3.0.0",
     "remark-mdx": "^1.6.21",
     "sharp": "^0.26.3",
+    "styled-components": "^5.2.1",
+    "tinacms": "^0.33.0",
     "typescript": "^4.1.2",
     "url": "^0.11.0",
     "webpack": "^5.6.0"
