--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "start": "next start",
     "export": "next export",
     "analyze": "ANALYZE=true yarn build",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate --experimental",
+    "prisma:studio": "prisma studio",
     "create:component": "foundry run plop component",
     "lint": "foundry run eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "yarn lint --fix",
@@ -41,6 +44,8 @@
     "@mdx-js/mdx": "^1.6.21",
     "@mdx-js/react": "^1.6.21",
     "@next/bundle-analyzer": "^10.0.2",
+    "@prisma/cli": "^2.11.0",
+    "@prisma/client": "^2.11.0",
     "@tinacms/react-core": "^0.33.0",
     "date-fns": "^2.0.0-alpha.16",
     "emotion-theming": "^10.0.10",
