--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@prisma/cli": "^2.11.0",
     "@prisma/client": "^2.11.0",
     "@tinacms/react-core": "^0.33.0",
+    "@udecode/slate-plugins": "^0.71.0",
     "date-fns": "^2.0.0-alpha.16",
     "emotion-theming": "^10.0.10",
     "es-cookie": "^1.2.0",
@@ -71,6 +72,10 @@
     "remark-external-links": "^3.0.0",
     "remark-mdx": "^1.6.21",
     "sharp": "^0.26.3",
+    "slate": "^0.59.0",
+    "slate-history": "^0.59.0",
+    "slate-hyperscript": "^0.59.0",
+    "slate-react": "^0.59.0",
     "styled-components": "^5.2.1",
     "tinacms": "^0.33.0",
     "typescript": "^4.1.2",
@@ -83,6 +88,7 @@
     "@sumup/foundry": "^4.0.0-canary",
     "@types/lodash": "^4.14.165",
     "@types/react": "^17.0.0",
+    "@types/styled-components": "^5.1.4",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.1",
     "babel-plugin-import-glob-array": "^0.2.0",
