--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "start": "next start",
     "export": "next export",
     "analyze": "ANALYZE=true yarn build",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate --experimental",
-    "prisma:studio": "prisma studio",
+    "db:migrate": "prisma migrate --preview-feature",
+    "db:reset": "prisma migrate reset --preview-feature && yarn db:seed",
+    "db:seed": "node ./prisma/scripts/seed.js",
+    "db:studio": "prisma studio",
     "create:component": "foundry run plop component",
     "lint": "foundry run eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "yarn lint --fix",
@@ -46,16 +47,23 @@
     "@next/bundle-analyzer": "^10.0.2",
     "@prisma/cli": "^2.11.0",
     "@prisma/client": "^2.11.0",
+    "@sumup/intl": "^1.1.3",
     "@tinacms/react-core": "^0.33.0",
+    "@types/convert-units": "^2.3.3",
     "@udecode/slate-plugins": "^0.71.0",
+    "cloudinary": "^1.23.0",
+    "cloudinary-core": "^2.11.3",
+    "convert-units": "^2.3.4",
     "date-fns": "^2.0.0-alpha.16",
     "emotion-theming": "^10.0.10",
     "es-cookie": "^1.2.0",
     "fontfaceobserver": "^2.0.9",
     "github-slugger": "^1.2.1",
     "glob": "^7.1.3",
+    "hoist-non-react-statics": "^3.3.2",
     "isomorphic-unfetch": "^3.1.0",
     "lodash": "^4.17.10",
+    "multer": "^1.4.2",
     "next": "^10.0.2",
     "next-compose-plugins": "^2.2.1",
     "next-mdx-enhanced": "^5.0.0",
@@ -66,6 +74,7 @@
     "react-map-gl": "^5.2.10",
     "react-svg-loader": "^3.0.3",
     "react-tinacms-inline": "^0.33.0",
+    "react-use": "^15.3.4",
     "rehype-slug": "^3.0.0",
     "remark": "^11.0.1",
     "remark-emoji": "^2.0.1",
@@ -87,6 +96,7 @@
     "@babel/core": "^7.12.7",
     "@emotion/babel-preset-css-prop": "^10.0.9",
     "@sumup/foundry": "^4.0.0-canary",
+    "@types/faker": "^5.1.5",
     "@types/lodash": "^4.14.165",
     "@types/react": "^17.0.0",
     "@types/styled-components": "^5.1.4",
@@ -95,6 +105,7 @@
     "babel-plugin-import-glob-array": "^0.2.0",
     "babel-plugin-lodash": "^3.3.4",
     "eslint-import-resolver-webpack": "^0.13.0",
-    "eslint-loader": "^4.0.2"
+    "eslint-loader": "^4.0.2",
+    "faker": "^5.1.0"
   }
 }
